# TermEmuProject

./: README.md  build.gradle.kts  build_on_device.sh  build_rootfs.sh  compile_proot.sh  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.acside/editor/: openedFiles.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: debian-rootfs.tar.xz  proot  setup_debian.sh  start_debian.sh
app/src/main/cpp/: CMakeLists.txt  audio_decoder.cpp  audio_decoder.h  jni_bridge.cpp  kitty_parser.cpp  kitty_parser.h  media_rescaler.cpp  media_rescaler.h  pty_manager.cpp  pty_manager.h
app/src/main/java/com/yourname/termemu/: AudioRenderer.kt  JniBridge.kt  MainActivity.kt  MediaOverlayView.kt  TerminalForegroundService.kt  TerminalSession.kt  TerminalView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
